deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SERVICENAME
  labels:
    app: SERVICENAME
    environment: development
    app.kubernetes.io/name: SERVICENAME
    app.kubernetes.io/instance: fcb-openshift
    app.kubernetes.io/component: SERVICENAME
    fcbint.net/app-id: APM0001007
    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: SERVICENAME
  template:
    metadata:
      annotations:
        appDeploymentTimeStamp: TIMESTAMP
      labels:
        app: SERVICENAME
        environment: development
        app.kubernetes.io/name: SERVICENAME
        app.kubernetes.io/instance: fcb-openshift
        app.kubernetes.io/component: SERVICENAME
        fcbint.net/app-id: APM0001007
      ports:
      - containerPort: 8080
    spec:
      containers:
      - image: IMAGEID
        name: SERVICENAME
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "10m"
            memory: "0.256Gi"
          limits:
            cpu: "200m"
            memory: "0.512Gi"
        volumeMounts:
        - name: config-volume
          mountPath: /configs
        - name: genesis-smb-volume
          mountPath: /files
          subPath: Inbound
        readinessProbe:
          httpGet:
            path: actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 60
        livenessProbe:
          httpGet:
            path: actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          timeoutSeconds: 10
          periodSeconds: 60
      volumes:
      - name: config-volume
        configMap:
          name: CONFIGMAP
      - name: genesis-smb-volume
        persistentVolumeClaim:
          claimName: genesis-smb-service

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: SERVICENAME
    environment: development
    app.kubernetes.io/name: SERVICENAME
    app.kubernetes.io/instance: fcb-openshift
    app.kubernetes.io/component: SERVICENAME
    fcbint.net/app-id: APM0001007
  name: SERVICENAME
  
spec:
  host: ROUTEHOSTNAME
  port:
    targetPort: 8080
  to:
    kind: Service
    name: SERVICENAME
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: SERVICENAME
 namespace: gen-nifi-dev
 labels:      
      app: SERVICENAME
      environment: development
      app.kubernetes.io/name: SERVICENAME
      app.kubernetes.io/instance: fcb-openshift
      app.kubernetes.io/component: SERVICENAME
      fcbint.net/app-id: APM0001007
      
 annotations:
    meta.helm.sh/release-name: genesis
    meta.helm.sh/release-namespace: gen-nifi-dev
    route.openshift.io/termination: edge

spec:
 ingressClassName: openshift-core-zone
 rules:
   - host: ROUTEHOSTNAME
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: SERVICENAME
               port:
                 number: 8080
 tls:
   - hosts:
       - ROUTEHOSTNAME
     secretName: SERVICENAME
---
apiVersion: v1
kind: Service
metadata:
  name: SERVICENAME
  labels:
    app: SERVICENAME
    environment: development
    app.kubernetes.io/name: SERVICENAME
    app.kubernetes.io/instance: fcb-openshift
    app.kubernetes.io/component: SERVICENAME
    fcbint.net/app-id: APM0001007
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: SERVICENAME
  selector:
    app: SERVICENAME
